--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "electron": "electron ."
+    "start": "electron . & react-scripts start",
+    "build": "react-scripts build"
   },
   "keywords": [
     "Electron",
