--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "electron . & react-scripts start",
     "build": "react-scripts build"
   },
+  "homepage": "./",
   "keywords": [
     "Electron",
     "quick",
